# clef

./: .gitignore  .release-note  AGENTS.md  CLAUDE.md  README.md  default_bus_layout.tres  entities.json  gdlintrc  icon.svg.import  mempalace.yaml  project.godot  start-codex.bat
server/: pyproject.toml  start-server.bat  start.bat  stop.bat  test_e2e.py
server/config/: agents.yaml  logging.json  profiles.yaml  providers.yaml.example  settings.json
server/config/prompts/: clef-composer.md  clef-harmonist.md  clef-orchestrator.md  clef-repair.md  clef-reviewer.md  clef-revision.md  clef-rhythmist.md  shared_constraints.yaml
server/data/sessions/: clef-1516f808.json  clef-2ef9c7a0.json  (+2 more)
server/docs/: 2026-04-11-e2e-fix-report.md  2026-04-12-code-driven-repair-loop-report.md  2026-04-14-server-scheduling-recovery-report.md  2026-04-16-server-output-quality-report.md  2026-04-21-clef-server-architecture-review.md
server/tests/: conftest.py  poc_two_pass_generation.py  test_agent_loop.py  test_agents.py  test_api_ttl.py  test_concurrency.py  test_config.py  test_harness_phase1.py  test_harness_phase2.py  test_harness_phase3.py  test_integration.py  test_integration_harness.py  test_orchestrator.py  test_prompt_builder.py  test_prompt_parity.py  test_providers.py  test_response_parser.py  test_routes.py  test_routes_steps.py  test_score_processor.py  test_sessions.py  test_sessions_steps.py  test_tools.py  test_validation.py  test_workflow.py
server/web/: index.html  package-lock.json  package.json  start.bat  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+603 files in other folders)
