[project]
name = "clef-server"
version = "0.1.0"
description = "Clef multi-agent music composition server"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core>=0.1",
    "agent-framework-openai>=0.1",
    "agent-framework-anthropic>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "sse-starlette>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clef_server"]
